[package]
name = "preprocessing"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "preprocessing"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.4", features = ["extension-module"] }
tokenizers = "0.11.3"
numpy = "0.16"
serde_json = "1.0.74"
serde = "1.0.133"
